// Copyright 2019 SWIR authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "rs.swir.api.internal";
option java_outer_classname = "SwirInternalApiProto";

package swir_internal;


service ServiceInvocationDiscoveryApi {
    rpc Invoke (InvokeRequest) returns (InvokeResponse) {
    }

}

message InvokeRequest {
  string correlation_id=1;
  string service_name=2;
  string method = 3;
  string request_target = 4;
  map<string, string> headers = 5;
  bytes payload = 6;
}

message InvokeResponse {
  string correlation_id=1;
  string service_name=2;
  int32 status_code=3;
  string status_texte=4;
  map<string, string> headers = 5;
  bytes payload = 6;  
}